<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="done">@string/translated_button_done</string>
    <string name="cancel">@string/missing_cancel</string>
    <string name="unknown">@string/translated_send_unknown</string>
    <string name="blank"></string>
    <string name="backup_button_done">@string/translated_button_done</string>
    <string name="backup_button_primary">@string/custom_translation_verify</string>
    <string name="backup_format_birthday_height">@string/custom_translation_birthday</string>
    <string name="backup_instruction_store_words">@string/missing_backup_instruction_store_words</string>
    <string name="backup_slogan">@string/missing_backup_slogan</string>
    <string name="backup_verification_not_implemented">@string/missing_backup_verification_not_implemented</string>
    <string name="feedback_hint_1">@string/missing_feedback_hint_1</string>
    <string name="feedback_hint_2">@string/missing_feedback_hint_2</string>
    <string name="feedback_hint_3">@string/missing_feedback_hint_3</string>
    <string name="feedback_question_1">@string/missing_feedback_question_1</string>
    <string name="feedback_question_2">@string/missing_feedback_question_2</string>
    <string name="feedback_question_3">@string/missing_feedback_question_3</string>
    <string name="feedback_thanks">@string/missing_feedback_thanks</string>
    <string name="history_address_label">@string/missing_history_address_label</string>
    <string name="history_balance_available">@string/translated_balance_available</string>
    <string name="history_balance_updating">@string/missing_history_balance_updating</string>
    <string name="history_empty_text">@string/missing_history_empty_text</string>
    <string name="history_header_transactions">@string/translated_screen_wallethistory</string>
    <string name="history_instruction_enter_amount">@string/translated_balance_amounttosend</string>
    <string name="home_balance_available">@string/translated_balance_available</string>
    <string name="home_balance_updating">@string/missing_home_balance_updating</string>
    <string name="home_banner_expecting">@string/custom_translation_expecting</string>
    <string name="home_button_send_disconnected">@string/missing_home_button_send_disconnected</string>
    <string name="home_button_send_downloading">@string/custom_translation_syncing</string>
    <string name="home_button_send_has_funds">@string/translated_button_sendamount</string>
    <string name="home_button_send_idle">@string/missing_home_button_send_idle</string>
    <string name="home_button_send_no_funds">@string/translated_balance_nofunds</string>
    <string name="home_button_send_scanning">@string/custom_translation_scanning</string>
    <string name="home_button_send_updating">@string/missing_home_button_send_updating</string>
    <string name="home_button_send_validating">@string/missing_home_button_send_validating</string>
    <string name="home_dialog_no_balance_button_positive">@string/missing_home_dialog_no_balance_button_positive</string>
    <string name="home_dialog_no_balance_message">@string/missing_home_dialog_no_balance_message</string>
    <string name="home_dialog_no_balance_title">@string/translated_balance_nofunds</string>
    <string name="home_history_button_text">@string/translated_button_wallethistory</string>
    <string name="home_instruction_enter_amount">@string/translated_balance_amounttosend</string>
    <string name="home_instruction_fund_now">@string/missing_home_instruction_fund_now</string>
    <string name="home_no_balance">@string/translated_balance_nofunds</string>
    <string name="home_title">@string/translated_balance_amounttosend</string>
    <string name="balance_detail_button_send_transparent_funds" tools:ignore="MissingTranslation">Shield Transparent Funds</string>
    <string name="balance_detail_text_total_title" tools:ignore="MissingTranslation">= TOTAL</string>
    <string name="landing_backup_skipped_message_1">@string/missing_landing_backup_skipped_message_1</string>
    <string name="landing_backup_skipped_message_2">@string/missing_landing_backup_skipped_message_2</string>
    <string name="landing_button_backup_skipped_1">@string/missing_landing_button_backup_skipped_1</string>
    <string name="landing_button_backup_skipped_2">@string/missing_landing_button_backup_skipped_2</string>
    <string name="landing_button_primary">@string/missing_landing_button_primary</string>
    <string name="landing_button_primary_create_success">@string/translated_button_backup</string>
    <string name="landing_button_progress_create">@string/missing_landing_button_progress_create</string>
    <string name="landing_button_secondary">@string/missing_landing_button_secondary</string>
    <string name="landing_button_secondary_create_success">@string/translated_button_skip</string>
    <string name="landing_button_secondary_import_success">@string/translated_button_skip</string>
    <string name="landing_create_success_message">@string/missing_landing_create_success_message</string>
    <string name="landing_import_success_message">@string/missing_landing_import_success_message</string>
    <string name="landing_import_success_primary_button">@string/translated_button_backup</string>
    <string name="landing_title">@string/missing_landing_title</string>
    <string name="profile_backup_wallet">@string/translated_button_backup_wallet</string>
    <string name="profile_rescan_wallet">@string/missing_profile_rescan_wallet</string>
    <string name="profile_ecc_wallet">@string/translated_app_name</string>
    <string name="profile_see_application_logs">@string/translated_button_applicationlogs</string>
    <string name="profile_send_feedback">@string/translated_button_feedback</string>
    <string name="profile_share_log_title">@string/missing_profile_share_log_title</string>
    <string name="profile_shielded_user">@string/translated_profile_screen</string>
    <string name="receive_address_label_shielded">@string/translated_address_shielded</string>
    <string name="receive_address_title">@string/missing_receive_address_title</string>
    <string name="scan_address_title">@string/translated_send_scanqr</string>
    <string name="scan_invalid_address">@string/missing_scan_invalid_address</string>
    <string name="send_address_hint">@string/translated_label_to</string>
    <string name="send_banner_address_unknown">@string/translated_send_unknown</string>
    <string name="send_banner_address_user">@string/translated_address_shielded</string>
    <string name="send_button_primary">@string/translated_button_send</string>
    <string name="send_checkbox_include_address">@string/translated_label_replyto</string>
    <string name="send_complete_button_text">@string/translated_button_seedetails</string>
    <string name="send_confirmation_prompt">@string/custom_translation_send_confirm</string>
    <string name="send_failed_button_text">@string/missing_send_failed_button_text</string>
    <string name="send_final_button_primary_back">@string/translated_button_back</string>
    <string name="send_final_button_primary_cancel">@string/missing_send_final_button_primary_cancel</string>
    <string name="send_final_button_primary_details">@string/translated_button_seedetails</string>
    <string name="send_final_button_primary_failed">@string/missing_send_final_button_primary_failed</string>
    <string name="send_final_button_primary_retry">@string/missing_send_final_button_primary_retry</string>
    <string name="send_final_button_primary_sent">@string/translated_send_sent</string>
    <string name="send_final_error_encoding">@string/missing_send_final_error_encoding</string>
    <string name="send_final_error_submitting">@string/missing_send_final_error_submitting</string>
    <string name="send_final_result_cancelled">@string/translated_send_cancelled</string>
    <string name="send_final_sending">@string/custom_translation_sending</string>
    <string name="send_final_to">@string/translated_label_to</string>
    <string name="send_fund_source_highlight">@string/missing_send_fund_source_highlight</string>
    <string name="send_fund_source_prefix">@string/custom_translation_from_your</string>
    <string name="send_fund_source_suffix">@string/custom_translation_wallet</string>
    <string name="send_hint_input_zcash_address">@string/missing_send_hint_input_zcash_address</string>
    <string name="send_hint_input_zcash_amount">@string/translated_balance_amounttosend</string>
    <string name="send_history_clipboard">@string/translated_send_onclipboard</string>
    <string name="send_history_last">@string/translated_send_lastused</string>
    <string name="send_history_last_and_clipboard">@string/missing_send_history_last_and_clipboard</string>
    <string name="send_memo_chars_abbreviation">@string/custom_translation_chars</string>
    <string name="send_memo_excluded_message">@string/missing_send_memo_excluded_message</string>
    <string name="send_memo_hint">@string/missing_send_memo_hint</string>
    <string name="send_memo_included_message">@string/missing_send_memo_included_message</string>
    <string name="send_pending_button_text">@string/missing_send_pending_button_text</string>
    <string name="send_validation_address_invalid">@string/missing_send_validation_address_invalid</string>
    <string name="send_validation_address_self">@string/translated_feedback_sameaddress</string>
    <string name="send_validation_address_valid_taddr">@string/translated_feedback_transparentaddress</string>
    <string name="send_validation_address_valid_zaddr">@string/translated_feedback_shieldedaddress</string>
    <string name="send_validation_error_address_invalid">@string/translated_feedback_default</string>
    <string name="send_validation_error_amount_minimum">@string/missing_send_validation_error_amount_minimum</string>
    <string name="send_validation_error_dust">@string/missing_send_validation_error_dust</string>
    <string name="send_validation_error_memo_length">@string/missing_send_validation_error_memo_length</string>
    <string name="send_validation_error_no_available_funds">@string/translated_balance_nofunds</string>
    <string name="send_validation_error_too_much">@string/missing_send_validation_error_too_much</string>
    <string name="send_validation_error_unknown_funds">@string/missing_send_validation_error_unknown_funds</string>
    <string name="send_no_z_address_message">To add a memo, enter a shielded address.</string>
    <string name="send_more_info">More Info</string>
    <string name="settings_buttons_restore">@string/missing_settings_buttons_restore</string>
    <string name="settings_change_lightwalletd_server">@string/missing_settings_change_lightwalletd_server</string>
    <string name="settings_host_helper_text">@string/missing_settings_host_helper_text</string>
    <string name="settings_port_helper_text">@string/missing_settings_port_helper_text</string>
    <string name="settings_reset">@string/missing_settings_reset</string>
    <string name="settings_server_address">@string/missing_settings_server_address</string>
    <string name="settings_server_port">@string/missing_settings_server_port</string>
    <string name="settings_toast_change_server_failure">@string/missing_settings_toast_change_server_failure</string>
    <string name="settings_update">@string/missing_settings_update</string>
    <string name="content_description_profile_back">@string/missing_content_description_profile_back</string>
    <string name="content_description_profile_copy">@string/missing_content_description_profile_copy</string>
    <string name="content_description_profile_settings">@string/missing_content_description_profile_settings</string>
    <string name="content_description_profile_zebra">@string/missing_content_description_profile_zebra</string>
</resources>