<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hit_area_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_send_amount_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_content_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_content_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <View
        android:id="@+id/hit_area_exit"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:alpha="0.3"
        android:background="@android:color/transparent"
        android:elevation="6dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_hit_area_top" />

    <ImageView
        android:id="@+id/icon_exit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="6dp"
        app:tint="@color/text_light_dimmed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        app:layout_constraintWidth_percent="0.08"
        app:srcCompat="@drawable/ic_cancel"
        android:contentDescription="@string/content_description_profile_back" />

    <ImageView
        android:id="@+id/icon_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="6dp"
        app:tint="@color/text_light_dimmed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        app:layout_constraintWidth_percent="0.08"
        app:srcCompat="@drawable/ic_settings"
        android:contentDescription="@string/content_description_profile_settings" />

    <ImageView
        android:id="@+id/icon_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212"
        app:layout_constraintWidth_percent="0.4"
        app:srcCompat="@drawable/ic_profile_zebra_01"
        android:contentDescription="@string/content_description_profile_zebra" />

    <View
        android:id="@+id/hit_area_settings"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_hit_area_top" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/profile_shielded_user"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_profile" />

    <TextView
        android:id="@+id/text_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Zcash.TextAppearance.AddressPart"
        android:textColor="@color/text_light_dimmed"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_username"
        tools:text="zs1g7cqw...9qmvyzgm" />

    <ImageView
        android:id="@+id/image_copy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_content_copy"
        app:layout_constraintBottom_toBottomOf="@id/text_address"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@id/text_address"
        app:layout_constraintTop_toTopOf="@id/text_address"
        android:contentDescription="@string/content_description_profile_copy" />

    <View
        android:id="@+id/hit_area_address"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:onClick="copyAddress"
        app:layout_constraintBottom_toTopOf="@id/button_feedback"
        app:layout_constraintEnd_toEndOf="@id/guideline_content_end"
        app:layout_constraintStart_toStartOf="@id/text_address"
        app:layout_constraintTop_toTopOf="@id/text_username"
        tools:background="@color/spacer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_feedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Zcash.Button"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/profile_send_feedback"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_content_end"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintTop_toBottomOf="@id/text_address"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_backup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Zcash.Button.OutlinedButton"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/profile_backup_wallet"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/text_light"
        app:layout_constraintEnd_toEndOf="@id/guideline_content_end"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintTop_toBottomOf="@id/button_feedback" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_rescan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Zcash.Button.OutlinedButton.Primary"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/profile_rescan_wallet"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/guideline_content_end"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintTop_toBottomOf="@id/button_backup" />

    <TextView
        android:id="@+id/button_logs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/profile_see_application_logs"
        android:textColor="@color/selector_button_text_light_dimmed"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_rescan" />

    <!--        -->
    <!-- Banner -->
    <!--        -->

    <TextView
        android:id="@+id/text_banner_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_banner"
        android:elevation="6dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/profile_ecc_wallet"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/selector_button_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_content_end"
        app:layout_constraintStart_toStartOf="@id/guideline_content_start"
        app:layout_constraintTop_toBottomOf="@id/button_logs"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:elevation="6dp"
        tools:text="v1.0.0-alpha05"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/text_light_dimmed"
        app:layout_constraintBaseline_toBaselineOf="@id/text_banner_message"
        app:layout_constraintEnd_toEndOf="@id/text_banner_message" />

</androidx.constraintlayout.widget.ConstraintLayout>